# miniFeadBackApp

./: README.md
backend/: .env.example  README.md  pyproject.toml  run.py
backend/app/: main.py
backend/app/config/: database.py  settings.py
backend/app/models/: feedback.py
backend/app/routes/: feedback.py
backend/app/services/: feedback_services.py
backend/tests/: test_database_config.py
backend/tests/feedback/: test_feedback_api.py  test_feedback_model.py  test_feedback_services.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx
